--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -70,3 +70,12 @@ word-wrap: break-word;
 .my-pink-outline-button:hover {
     color: #fff;
 }
+
+.my-bottem-dark {
+/*
+  background: #466368;
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+  background:    -moz-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1);
+  background:         linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+*/
+}
