--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -3,6 +3,24 @@
 О нас
 {% endblock %}
 {% block body %}
+<div class="container col-xl-10 col-xxl-8 px-4">
+    <div class="row align-items-center g-lg-5 py-3">
+        <div class="text-center py-3">
+          <h2 class="display-5 fw-bold">Go further with Bootstrap Themes</h2>
+          <p class="col-md-8 fs-4 mx-auto lead">
+            Need something more than these examples? Take Bootstrap to the next level with premium themes from the official Bootstrap Themes marketplace. They’re built as their own extended frameworks, rich with new components and plugins, documentation, and powerful build tools.
+          </p>
+        </div>
+
+        <div class="p-3 mb-4 my-card rounded-3">
+          <div class="container-fluid py-5">
+            <h1 class="display-5 fw-bold">Custom jumbotron</h1>
+            <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+            <a href="#" class="btn my-pink-button btn-lg">Example button</a>
+          </div>
+        </div>
+    </div>
+</div>
 <h1 class="text-center m-5">Создатели</h1>
 <div class="container marketing">
     <div class="row">
@@ -50,7 +68,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Проект активно растёт и развивается.</h2>
-        <p class="lead">Как любой небольшой проект, мы активно развиваем нашу эко-систему, увеличивая количество функционала, и улучшая логику интерфейсов. Отсутствие популярности вынуждает искать удобные решения для того, чтобы при выборе сервиса пользователь пренебрёг популярностью сервиса во имя приватности и эргономичности.</p>
+        <p class="lead">Как любой небольшой проект, мы активно развиваем нашу эко-систему, увеличивая количество функционала, и улучшая логику интерфейсов. Наличие сильных конкурентов вынуждает искать удобные решения для того, чтобы при выборе сервиса пользователь пренебрёг популярностью сервиса во имя приватности и эргономичности.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" src="https://regnum.ru/uploads/pictures/news/2017/03/05/regnum_picture_1488700740729019_normal.jpg">
