--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -27,40 +27,25 @@
           </label>
         </div>
         <button class="mb-3 w-100 btn btn-lg btn-primary my-pink-button" type="submit">Войти</button>
-        <a class="w-100 btn btn-lg my-outline-button" href="/account/register" >Регистрация</a>
-        <hr class="my-line">
+        <a class="w-100 btn btn-lg my-outline-button mb-3" href="/account/register{{'?page=' + active_page if active_page else ''}}" >Регистрация</a>
+<!--        <hr class="my-line">-->
         <small>Нажимая кнопку Войти, Вы подтверждаете согласие с <a href="/politic">Политикой сайта</a></small>
       </form>
     </div>
     <div class="text-center py-3">
-      <h2 class="display-5 fw-bold">Go further with Bootstrap Themes</h2>
-      <p class="col-md-8 fs-4 mx-auto lead">
-        Need something more than these examples? Take Bootstrap to the next level with premium themes from the official Bootstrap Themes marketplace. They’re built as their own extended frameworks, rich with new components and plugins, documentation, and powerful build tools.
+      <h2 class="display-5 fw-bold">Больше возможностей</h2>
+      <p class="col-md-12 fs-4 mx-auto lead">
+        Ещё не знаете о возможностях lava-land.ru? - Посейтите главную страницу. А также рекомендуем посмотреть раздел "Что нового" во вкладке Поддержка, там вы узнаете о новых возможностях, сможете задать вопрос или рассказать о ваших пожеланиях
       </p>
-      <a href="#" class="btn btn-lg my-pink-button mb-3">Browse themes</a>
+        <a href="/index" class="btn btn-lg my-pink-button mb-3">Узнать больше</a>
     </div>
 
     <div class="p-3 mb-4 my-card rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-        <a href="#" class="btn my-pink-button btn-lg">Example button</a>
-      </div>
-    </div>
-
-    <div class="text-center py-3">
-      <h2 class="display-5 fw-bold">Go further with Bootstrap Themes</h2>
-      <p class="col-md-8 fs-4 mx-auto lead">
-        Need something more than these examples? Take Bootstrap to the next level with premium themes from the official Bootstrap Themes marketplace. They’re built as their own extended frameworks, rich with new components and plugins, documentation, and powerful build tools.
-      </p>
-      <a href="#" class="btn btn-lg my-pink-button mb-3">Browse themes</a>
-    </div>
-
-    <div class="p-3 mb-4 my-card rounded-3">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-        <a href="#" class="btn my-pink-button btn-lg">Example button</a>
+        <h1 class="display-5 fw-bold">Фото коллекции</h1>
+        <p class="col-md-8 fs-4">
+            Мы планируем запустить новый сервис "Фото коллекции". Создавайте альбомы, делитесь ими с друзьями и близкими, или создайте сеймейный фото-альбом, и не только. О ваших пожеланиях пишите на почту help@lava-land.ru
+        </p>
       </div>
     </div>
   </div>
