--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -71,7 +71,9 @@ word-wrap: break-word;
     color: #fff;
 }
 
+
 .my-bottem-dark {
+clear:both
 /*
   background: #466368;
   background: -webkit-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
