--- a/app/templates/messenger.html
+++ b/app/templates/messenger.html
@@ -51,6 +51,9 @@
                                 <input type="text" class="form-control" placeholder="Search...">
                             </div>
                             <ul class="list-unstyled chat-list mt-2 mb-0">
+                                {% if not users %}
+                                    <h4>У тебя пока нет друзей (</h4>
+                                {% endif %}
                                 {% for user in users %}
                                     <li class="clearfix" onclick="location.href='/messenger/{{ user.id }}';">
                                         <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">
