--- a/app/static/css/premium.css
+++ b/app/static/css/premium.css
@@ -2,9 +2,6 @@
   width: 200px;
   position: relative;
 }
-#num {
-width: 5em;
-}
 .my-div {
     display: block;
     margin-left: auto;
@@ -24,15 +21,14 @@ input[type="range"] {
   border-radius: 0.3rem;
 }
 input[type="number"] {
-background-opacity: 0;
+    width: 5rem;
 }
-/*
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  background: #ff4500;
+  background: #FFF;
   cursor: ew-resize;
   box-shadow: 0 0 2px 0 #555;
   transition: background .3s ease-in-out;
@@ -45,4 +41,4 @@ input[type=range]::-webkit-slider-runnable-track  {
   border: none;
   background: transparent;
 }
-*/
+
