--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,88 +6,62 @@
 <div class="container col-xl-10 col-xxl-8 px-4">
     <div class="row align-items-center g-lg-5 py-3">
         <div class="text-center py-3">
-          <h2 class="display-5 fw-bold">Go further with Bootstrap Themes</h2>
+          <h2 class="display-5 fw-bold"></h2>
           <p class="col-md-8 fs-4 mx-auto lead">
-            Need something more than these examples? Take Bootstrap to the next level with premium themes from the official Bootstrap Themes marketplace. They’re built as their own extended frameworks, rich with new components and plugins, documentation, and powerful build tools.
+           lava-land.ru - это облако, нацеленное на пользователя, а не на корпарацию. Для этого наш сайт имеет простой и понятный интерфейс. Наш сервис даёт возможность настроить себе максимально подходящий тариф, не покупая лишние гигабайты места. 
           </p>
         </div>
 
-        <div class="p-3 mb-4 my-card rounded-3">
+        <div class="p-3 mb-4 my-card rounded-3 text-center">
           <div class="container-fluid py-5">
-            <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-            <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-            <a href="#" class="btn my-pink-button btn-lg">Example button</a>
+            <h1 class="display-5"> Доступ к файлам в любой точке мира</h1>
+            <p class="col-md-8 fs-4"></p>
+            <a href="/login?page=/index" class="btn my-pink-button btn-lg mt-3">Начать сейчас</a>
           </div>
         </div>
     </div>
 </div>
-<h1 class="text-center m-5">Создатели</h1>
+<h1 class="text-center m-5">Участники проекта</h1>
 <div class="container marketing">
     <div class="row">
       <div class="col-lg-3">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://sun9-9.userapi.com/s/v1/ig2/7tEx901z0VsgLPuwq6Z6AGNOY07KAooJD7x8GxnF3v7hFHcAZ6aTT1HhPNT7226Az2BEnrLnZpMF_XDNI3vR1CqT.jpg?size=2160x2160&quality=95&type=album">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="/static/images/lawrence.webp">
         <h2>Лаврентий Наумов</h2>
         <p>Программист</p>
         <p><a class="btn my-outline-button" href="https://vk.com/prostolavr">Заглянуть в вк</a></p>
       </div>
       <div class="col-lg-3">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://i.pinimg.com/originals/2e/2e/21/2e2e2125ee53807c2d77b34773f84b5c.jpg">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="/static/images/dema.webp">
         <h2>Демьян Бубнов</h2>
         <p>Программист</p>
         <p><a class="btn my-outline-button" href="https://vk.com/id618170319">Заглянуть в вк</a></p>
       </div>
       <div class="col-lg-3">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://sun9-11.userapi.com/s/v1/if2/iYMxy1oIw7BkUev8n7_ycCytTSv61R070IHMfZZZ55CMuW5bDfJX_qtgRHG6J1HyUj5nN_tOlrqODqqvfyahVxCO.jpg?size=499x1080&quality=96&type=album">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="/static/images/nastya.webp">
         <h2>Анастасия Хацкевич</h2>
         <p>Тестировщик</p>
         <p><a class="btn my-outline-button" href="https://vk.com/anastasiia1267">Заглянуть в вк</a></p>
       </div>
       <div class="col-lg-3">
-        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://thumbs.dreamstime.com/b/%D1%87%D0%B5%D1%80%D0%BD%D1%8B%D0%B9-%D1%83%D0%BA%D0%B0%D0%B7%D1%8B%D0%B2%D0%B0%D1%8E%D1%89%D0%B8%D0%B9-%D0%BF%D0%B0%D0%BB%D0%B5%D1%86-%D0%BA-%D1%82%D0%B5%D0%B1%D0%B5-%D1%87%D0%B5%D1%80%D0%BD%D0%B0%D1%8F-%D1%80%D1%83%D0%BA%D0%B0-%D1%83%D0%BA%D0%B0%D0%B7%D1%8B%D0%B2%D0%B0%D1%8E%D1%89%D0%B0%D1%8F-%D0%BF%D0%B0%D0%BB%D1%8C%D1%86%D0%B5%D0%BC-%D0%BD%D0%B0-229124886.jpg">
+        <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="/static/images/you.webp">
         <h2>Ты</h2>
-        <p>Покупая подписку ты поддерживаешь нас и становишься частью этого проекта! Любой вклад поможет проекту развиваться дальше</p>
+        <p>Покупая подписку, оствляя отзывы и предложения, ты поддерживаешь нас и становишься частью этого проекта!</p>
           <p><a class="btn my-outline-button" href="/premium">Поддержать</a></p>
       </div>
     </div>
-
-
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-          <h2 class="featurette-heading">Безопасность - это мы. Или почему мы лучше крупных IT-гигантов.</h2>
+    <div class="align-items-center col-m1">
+      <div class="my-card text-center p-3 m-5">
+          <h2 class="featurette-heading">Безопасность - это мы</h2>
         <p class="lead">Ваши данные находятся на удалённой машине. За счёт маршрутизации портов невозможно обратиться к ней по протоколу отличному от https. Использование при хранении на сервере неоригинальных имён файлов обеспечивает безопасность операционной системы. А используемые программные средства используют защиту памяти, исключая чтение загруженных в оперативную память данных. </p>
       </div>
-      <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" src="https://etu.ru/assets/images/Faculty-FKTI/csnd/02_information_security.jpg">
-      </div>
-    </div>
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
+      <div class="my-card text-center p-3 m-5">
         <h2 class="featurette-heading">Проект активно растёт и развивается.</h2>
         <p class="lead">Как любой небольшой проект, мы активно развиваем нашу эко-систему, увеличивая количество функционала, и улучшая логику интерфейсов. Наличие сильных конкурентов вынуждает искать удобные решения для того, чтобы при выборе сервиса пользователь пренебрёг популярностью сервиса во имя приватности и эргономичности.</p>
       </div>
-      <div class="col-md-5 order-md-1">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" src="https://regnum.ru/uploads/pictures/news/2017/03/05/regnum_picture_1488700740729019_normal.jpg">
-
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-    <div class="row featurette">
-      <div class="col-md-7">
+      <div class="my-card text-center p-3 m-5">
         <h2 class="featurette-heading">Ты знаешь Python3 + Flask? Мы ждём тебя!</h2>
         <p class="lead">У нас всегда найдутся задачи любой сложности. Хочешь работать у нас, но живёшь за границей? Не проблема! Рады взять на удалёнку. Гарантируем полностью свободный график и долю с продаж. Если заинтересовала вакансия, можно написать на help@lava-land.ru</p>
       </div>
-      <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="400" src="https://p4.wallpaperbetter.com/wallpaper/484/17/288/cooperation-wallpaper-preview.jpg">
-
-      </div>
     </div>
-    <hr class="featurette-divider">
-
-  </div>
+</div>
 {% endblock %}
