--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -8,7 +8,7 @@
         <div class="text-center py-3">
           <h2 class="display-5 fw-bold"></h2>
           <p class="col-md-8 fs-4 mx-auto lead">
-           lava-land.ru - это облако, нацеленное на пользователя, а не на корпарацию. Для этого наш сайт имеет простой и понятный интерфейс. Наш сервис даёт возможность настроить себе максимально подходящий тариф, не покупая лишние гигабайты места. 
+           lava-land.ru - это облако, нацеленное на пользователя, а не на корпорацию. Для этого наш сайт имеет простой и понятный интерфейс. Наш сервис даёт возможность настроить себе максимально подходящий тариф, не покупая лишние гигабайты.
           </p>
         </div>
 
@@ -16,7 +16,7 @@
           <div class="container-fluid py-5">
             <h1 class="display-5"> Доступ к файлам в любой точке мира</h1>
             <p class="col-md-8 fs-4"></p>
-            <a href="/login?page=/index" class="btn my-pink-button btn-lg mt-3">Начать сейчас</a>
+            <a href="/cloud" class="btn my-pink-button btn-lg mt-3">Начать сейчас</a>
           </div>
         </div>
     </div>
