--- a/app/templates/get_premium.html
+++ b/app/templates/get_premium.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="m-5">
     <h1 class="text-center m-5">Мы ещё не подключили платёжные системы:(</h1>
-    <h2 class="text-center m-5">Для оплаты другими способами вы можете написать на почту help@lava-land.ru</h2>
+    <h2 class="text-center m-5">Попробуйте оформить подписку позднее</h2>
   </div>
 {% endblock %}
 
