--- a/app/templates/messenger.html
+++ b/app/templates/messenger.html
@@ -14,8 +14,8 @@
         <p>{{ message }}</p>
     {% endif %}
     <div class="form-floating mb-3">
-        <input type="text" name='Friend_Login' class="form-control" id="floatingLogin" placeholder="Friend_Login">
-        <label for="floatingLogin">Логин друга</label>
+        <input type="text" name='Friend_Login' class="my-input form-control" id="floatingLogin" placeholder="Friend_Login">
+        <label class="my-input-label" for="floatingLogin">Логин друга</label>
     </div>
     <button class="w-100 btn btn-lg my-pink-button" type="submit">Добавить</button>
 </form>
@@ -45,10 +45,7 @@
                     <div class="card chat-app">
                         <div class="people-list">
                             <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="fa fa-search"></i></span>
-                                </div>
-                                <input type="text" class="form-control" placeholder="Search...">
+                                <input type="text" class="mb-2 my-input form-control" placeholder="Искать...">
                             </div>
                             <ul class="list-unstyled chat-list mt-2 mb-0">
                                 {% if not users %}
