--- a/app/templates/premium.html
+++ b/app/templates/premium.html
@@ -17,7 +17,7 @@
       <span id="my-span unselectable">ГБ</span>
     </div>
     <div class="py-5 mb-2 text-center text-end">
-      <button class="btn btn-lg my-pink-button">Оформить подписку</button>
+      <a href="/get_premium" class="btn btn-lg my-pink-button">Оформить подписку</a>
       <a href="/get_premium" class="btn my-pink-outline-button btn-lg">Хочу больше места</a>
     </div>
   </form>
