--- a/app/templates/premium.html
+++ b/app/templates/premium.html
@@ -18,7 +18,7 @@
     </div>
     <div class="py-5 mb-2 text-center text-end">
       <a href="/get_premium" class="btn btn-lg my-pink-button">Оформить подписку</a>
-      <a href="/get_premium" class="btn my-pink-outline-button btn-lg">Хочу больше места</a>
+      <a href="/get_premium" class="btn my-pink-outline-button btn-lg">Хочу больше 100 ГБ</a>
     </div>
   </form>
 </div>
