--- a/app/static/css/messenger.css
+++ b/app/static/css/messenger.css
@@ -1,3 +1,5 @@
+.chat-input {
+width: 100%;
 }
 body {
     background-color: #f4f7f6;
@@ -5,18 +7,18 @@ body {
 }
 #my-sidebar {
     float:right;
-    width: 300px; /* Ширина колонки */
+    width: 300px;
 }
 .my-sidebar-part {
-    margin: 5px; /* Поля вокруг текста */
+    margin: 5px;
 }
 .friend {
-    width: 300px; /* Ширина колонки */
-    padding: 5px; /* Поля вокруг текста */
+    width: 300px;
+    padding: 5px;
 }
 .requests {
-    width: 300px; /* Ширина колонки */
-    padding: 5px; /* Поля вокруг текста */
+    width: 300px;
+    padding: 5px;
 }
 .card {
     background: #fff;
