--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -52,7 +52,7 @@
     <div class="align-items-center col-m1">
       <div class="my-card text-center p-3 m-5">
           <h2 class="featurette-heading">Безопасность - это мы</h2>
-        <p class="lead">Ваши данные находятся на удалённой машине. За счёт маршрутизации портов невозможно обратиться к ней по протоколу отличному от https. Использование при хранении на сервере неоригинальных имён файлов обеспечивает безопасность операционной системы. А используемые программные средства используют защиту памяти, исключая чтение загруженных в оперативную память данных. </p>
+        <p class="lead">Ваши данные находятся на удалённой машине. За счёт маршрутизации портов невозможно обратиться к ней по протоколу отличному от https. Использование при хранении на сервере неоригинальных имён файлов обеспечивает безопасность операционной системы. Наши программные средства используют защиту памяти и исключают чтение загруженных в оперативную память данных.</p>
       </div>
       <div class="my-card text-center p-3 m-5">
         <h2 class="featurette-heading">Проект активно растёт и развивается.</h2>
@@ -60,7 +60,7 @@
       </div>
       <div class="my-card text-center p-3 m-5">
         <h2 class="featurette-heading">Ты знаешь Python3 + Flask? Мы ждём тебя!</h2>
-        <p class="lead">У нас всегда найдутся задачи любой сложности. Хочешь работать у нас, но живёшь за границей? Не проблема! Рады взять на удалёнку. Гарантируем полностью свободный график и долю с продаж. Если заинтересовала вакансия, можно написать на help@lava-land.ru</p>
+        <p class="lead">У нас всегда найдутся задачи любой сложности. Хочешь работать у нас, но живёшь за границей? Не проблема! Мы рады взять на удалёнку. Гарантируем полностью свободный график и долю с продаж. Если заинтересовала вакансия, можно написать на help@lava-land.ru</p>
       </div>
     </div>
 </div>
