--- a/app/templates/messenger.html
+++ b/app/templates/messenger.html
@@ -28,12 +28,12 @@
             <p>Пока нет заявок в друзья</p>
             {% endif %}
             {% for r in req %}
-            <li class="clearfix my-card">
+            <li class="clearfix my-input text-center">
                 <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">
                 <div class="about">
                     <div class="name">{{r[1]}}</div>
                     <a type="button" href="/messenger/accept_req/{{ r[0] }}" class="btn btn-sm my-pink-button my-1">Принять</a>
-                    <a type="button" href="/messenger/decline_req/{{ r[0] }}" class="btn btn-sm my-pink-button">Отклонить</a>
+                    <a type="button" href="/messenger/decline_req/{{ r[0] }}" class="btn btn-sm my-outline-button">Отклонить</a>
                 </div>
             </li>
             {% endfor %}
@@ -53,7 +53,7 @@
                     {% else %}
                         <ul class="list-unstyled chat-list mt-2 mb-0">
                             {% for user in users %}
-                                <li class="my-card clearfix" onclick="location.href='/messenger/{{ user.id }}';">
+                                <li class="my-input clearfix" onclick="location.href='/messenger/{{ user.id }}';">
                                     <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">
                                     <div class="about">
                                         <div class="name">{{user.name}}</div>
