--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -21,6 +21,9 @@
             <div class="col-lg-6 hidden-sm float-right">
                 <button onclick="confirm_click('/messenger/decline_req/{{ friend.id }}')" class="btn btn-sm my-outline-button">Удалить из друзей</button>
             </div>
+            <div class="col-lg-6 hidden-sm float-right">
+                <a href="/messenger" class="btn btn-sm my-outline-button mt-3">Назад</a>
+            </div>
         </div>
     </div>
     <div class="chat-history">
